@@ -24,7 +24,7 @@ xtr_avc_c::xtr_avc_c(const std::string &codec_id,
 {
 }
 
-void
+bool
 xtr_avc_c::write_nal(const binary *data,
                      size_t &pos,
                      size_t data_size,
@@ -32,16 +32,23 @@ xtr_avc_c::write_nal(const binary *data,
   size_t i;
   size_t nal_size = 0;
 
+  if (write_nal_size_size < data_size)
+    return false;
+
   for (i = 0; i < write_nal_size_size; ++i)
     nal_size = (nal_size << 8) | data[pos++];
 
-  if ((pos + nal_size) > data_size)
-    mxerror(boost::format(Y("Track %1%: NAL too big\n")) % m_tid);
+  if ((pos + nal_size) > data_size) {
+    mxwarn(boost::format(Y("Track %1%: NAL too big. Size according to header field: %2%, available bytes in packet: %3%. This NAL is defect and will be skipped.\n")) % m_tid % nal_size % (data_size - pos));
+    return false;
+  }
 
   m_out->write(s_start_code, 4);
   m_out->write(data + pos, nal_size);
 
   pos += nal_size;
+
+  return true;
 }
 
 void
@@ -65,7 +72,8 @@ xtr_avc_c::create_file(xtr_base_c *master,
   unsigned int numsps = buf[5] & 0x1f;
   size_t i;
   for (i = 0; (i < numsps) && (mpriv->get_size() > pos); ++i)
-    write_nal(buf, pos, mpriv->get_size(), 2);
+    if (!write_nal(buf, pos, mpriv->get_size(), 2))
+      break;
 
   if (mpriv->get_size() <= pos)
     return;
@@ -92,5 +100,6 @@ xtr_avc_c::handle_frame(memory_cptr &frame,
   binary *buf = (binary *)frame->get_buffer();
 
   while (frame->get_size() > pos)
-    write_nal(buf, pos, frame->get_size(), m_nal_size_size);
+    if (!write_nal(buf, pos, frame->get_size(), m_nal_size_size))
+      return;
 }
